--- a/Memoria/capitulos/03_Requisitos.tex
+++ b/Memoria/capitulos/03_Requisitos.tex
@@ -169,3 +169,13 @@ tanto hardware, software o de usuario.
 Se tratará que la interfaz de usuario siga un diseño minimalista y sencillo para facilitar el uso de la aplicación a todo tipo de personas y 
 garantizar cierto grado de accesibilidad. En cuanto a los colores, se usarán tonalidades de azul junto con grises.
 A continuación se presenta un primer boceto de lo que podría ser la interfaz de usuario para móviles.
+
+
+\begin{figure}[H]
+
+    \centering
+    \includegraphics[width=0.8\textwidth]{imagenes/c3/boceto.png}
+    \caption{Menú de selección de las lecciones de Artly clasificadas en movimientos artísticos}
+    \label{fig:artly}
+
+\end{figure}
